[package]
name = "malloc_freq"
version = "0.1.0-alpha.0"
authors = ["Leonid Ryzhyk <lryzhyk@vmware.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

radix_trie = { version =  "0.2.1", features=["serde"] }
libc = "0.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.8"
backtrace = { version = "0.3", features = ["serialize-serde"] }
args = "2.2"
getopts = "0.2"
anyhow = "1.0"
glob = ""
byteorder = "1.4"

[[bin]]
name = "mf_print"
path = "src/main.rs"
