[package]
name = "malloc_freq"
version = "0.1.1"
authors = ["Leonid Ryzhyk <lryzhyk@vmware.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ryzhyk/malloc_freq/"
description = "Malloc frequency profiler"

[dependencies]

radix_trie = { version =  "0.2.1", features=["serde"] }
libc = "0.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.8"
backtrace = { version = "0.3", features = ["serialize-serde"] }
args = "2.2"
getopts = "0.2"
anyhow = "1.0"
glob = "0.3"
byteorder = "1.4"
num-format = "0.4"
once_cell = "1.8"

[workspace]

members = ["crates/*"]

[[bin]]
name = "mf_print"
path = "src/main.rs"
