[package]
name = "lib_malloc_freq"
version = "0.1.0-alpha.2"
authors = ["Leonid Ryzhyk <lryzhyk@vmware.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ryzhyk/malloc_freq/"
description = "Use malloc frequency profiler via LD_PRELOAD"

[dependencies]

malloc_freq = { path = "../../" }
libc = "0.2"

[lib]
crate-type = ["cdylib"]
