[package]
name = "lib_malloc_freq"
version = "0.1.0"
authors = ["Leonid Ryzhyk <lryzhyk@vmware.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ryzhyk/malloc_freq/"
description = "Use malloc frequency profiler (malloc_freq) via LD_PRELOAD"

[dependencies]

malloc_freq = { path = "../../" ,version = "0.1.0"}
libc = "0.2"

[lib]
name = "malloc_freq"
crate-type = ["cdylib"]
